# AI-Video

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.sh  main.py  project_tree.txt  pyproject.toml  requirements.txt
config/: config.yaml
docs/:      AI_Model_Selection.md       Architecture.md  CodingStandard.md  DevelopmentLog.md  ProjectStructure.md  README.md  TrackerArchitecture.md  api_reference.md  architecture.md  architecture_principles.md  benchmark_design.md  design_decisions.md  editorial_guidelines.md  editorial_issues.md  milstone13.md  plugin.md  project_charter.md  project_status.md  publication_style_guide.md  release_candidate_test_plan.md  release_checklist_1.0.md  release_decision_1.0.md  release_plan_1.0.md  roadmap.md  terminology.md  vision.md
docs/notes/: development_log.md
gui/: app.py
scripts/: benchmark_pipeline.py  test_adapter.py  test_bytetrack.py  test_detection.py  test_insightface.py  test_kalman.py  test_supervision.py
src/ai_video/: __init__.py  appearance.py  assignment.py  bytetrack_face_tracker.py  cli.py  config_manager.py  cost_matrix.py  detector_factory.py  dummy_face_detector.py  dummy_face_tracker.py  face.py  face_renderer.py  ffmpeg_processor.py  geometry.py  (+15 more)
src/ai_video.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_appearance.py  test_assignment.py  test_base_renderer.py  test_blur_renderer.py  test_cli.py  test_config_manager.py  test_configuration_error.py  test_cost_matrix.py  test_detector_factory.py  test_face_renderer.py  test_frame_processor.py  test_geometry.py  test_kalman.py  test_matching.py  test_model_manager.py  test_performance_reporter.py  test_performance_statistics.py  test_pixelate_renderer.py  test_privacy_region.py  test_processing_configuration.py  test_processing_job.py  test_processing_state_manager.py  test_processor.py  test_renderer_factory.py  test_solid_renderer.py  test_system_open.py  test_temporal_region_cache.py  test_track_manager.py  test_tracker_factory.py  test_video_path_manager.py
tools/: benchmark_detector.py  benchmark_pipeline.py  benchmark_renderer.py  debug_detect_frame.py
videos/: README.md
(+40 files in other folders)
