[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video"
version = "0.2.0"
description = "AI Video Toolkit for face detection, tracking and blurring."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Hsieh Kuo-Ching" }
]

dependencies = [
    "opencv-python",
    "numpy",
    "pyyaml",
    "tqdm",
    "ffmpeg-python",
    "ultralytics"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"