[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video"
version = "0.7.0"

description = "Privacy-first AI Video Framework with plugin-based face detection, tracking and rendering."

readme = "README.md"

requires-python = ">=3.11"

authors = [
    { name = "Hsieh Kuo-Ching" }
]

license = { file = "LICENSE" }

keywords = [
    "ai",
    "video",
    "privacy",
    "face-detection",
    "face-tracking",
    "opencv",
    "computer-vision",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "pyyaml",
    "tqdm",
    "ffmpeg-python",
    "ultralytics",
    "insightface",
    "PySide6",
]

[project.urls]

Homepage = "https://github.com/gordan327/AI-Video"
Documentation = "https://github.com/gordan327/AI-Video/tree/main/docs"
Repository = "https://github.com/gordan327/AI-Video"
Issues = "https://github.com/gordan327/AI-Video/issues"

[project.scripts]

ai-video = "ai_video.cli:main"

ai-video-gui = "ai_video.gui.app:main"

[tool.setuptools]

package-dir = { "" = "src" }

[tool.setuptools.packages.find]

where = ["src"]

[tool.pytest.ini_options]

testpaths = ["tests"]

python_files = ["test_*.py"]

addopts = "-v"